Several fixes to imgs - Renamed divs under "contenttwo" - "contenttwo imgs now fixed in place with correct styling - "contentone" img now fixed with correct styling - minor changes including gaps and padding for spacing

--- a/style.css
+++ b/style.css
@@ -65,20 +65,40 @@ a:link {
     color: #1F2937;
     font-size: 36px;
     font-weight: bold;
+    text-align: center;
 }
 
 .contentone {
     background: #1F2937;
     color: white;
     padding-left: 50px;
+    padding-bottom: 100px;
     display: flex;
 }
 
-.twopictures > img {
+.contentone > div > img {
+    height: 250px;
+}
+
+.twopictures > div > img {
     width: 150px;
     height: 150px;
-    border: 4px solid blue;
-    border-radius: 4px;
+
+    border: 3px solid blue;
+    border-radius: 10px;
+}
+
+.twopictures {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 150px;
+}
+
+.twopicturescontainer {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
 }
 
 .text {
